--- a/gallery3.css
+++ b/gallery3.css
@@ -55,6 +55,7 @@ width:400px;
     max-width:315px;
     width:auto;
     padding: px;
+    font-weight: bold;
     
     font-family: 'Source Sans Pro', sans-serif;
     color: #90A4AE;
