--- a/materialize.css
+++ b/materialize.css
@@ -4340,33 +4340,38 @@ small {
   font-weight: 300;
 }
 
-@media only screen and (min-width: 360px) {
+@media only screen and (min-width: 360px) and (max-width: 500px) {
   .flow-text {
     font-size: 1.2rem;
+      font-weight: bold;
   }
 }
 
 @media only screen and (min-width: 390px) {
   .flow-text {
     font-size: 1.224rem;
+      
   }
 }
 
 @media only screen and (min-width: 420px) {
   .flow-text {
     font-size: 1.248rem;
+      
   }
 }
 
 @media only screen and (min-width: 450px) {
   .flow-text {
     font-size: 1.272rem;
+      
   }
 }
 
 @media only screen and (min-width: 480px) {
   .flow-text {
     font-size: 1.296rem;
+      
   }
 }
 
