--- a/materialize.css
+++ b/materialize.css
@@ -4468,6 +4468,7 @@ small {
 @media only screen and (min-width: 960px) {
   .flow-text {
     font-size: 1.68rem;
+      font-weight:bold;
   }
 }
 
