--- a/materialize.css
+++ b/materialize.css
@@ -4256,7 +4256,7 @@ html {
 @media only screen and (min-width: 0) {
   html {
     font-size: 16px;
-      font-weight: bold;
+      font-weight: 900;
   }
 }
 
